# rag_api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.lite  LICENSE  Makefile  README.md  api-compose.yaml  config.py  constants.py  dash_assistant.env.example  db-compose.yaml  docker-compose.override.yml.example  docker-compose.yaml  environment.yml  main.py  middleware.py  models.py  mongo.py  myrequest.py  parsers.py  pgvector_routes.py  process_docs.py  psql.py  pyproject.toml  pytest.ini  requirements.lite.txt  requirements.new.txt  requirements.txt  setup_env.sh  setup_venv.sh  store.py  store_factory.py  test_api.py  test_failover.py  test_failover_automation.py  test_requirements.txt  teste.py
.cursor/rules/: rag-api.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docker-build-workflow.yaml  images.yaml  n1-build-and-push.yml  release.yaml  trivy.yml
app/: config.py  constants.py  main.py  middleware.py  models.py  parsers.py  rag_utils.py
app/dash_assistant/: README.md  __init__.py  config.py  db.py  migrate.py
app/db/: mongo.py  psql.py
deploy/: push.sh  task-def.json
embeddings/: __init__.py  jinaai.py
test/: test_api.py
testFiles/: short.txt
tests/: conftest.py  test_app.py  test_batch_processing.py  test_batch_processing_integration.py  test_config.py  test_failover_mock.py  test_kb_manager.py  test_kb_routes.py  test_main.py  test_middleware.py  test_models.py  test_parsers.py  test_path_validation.py  test_titan_v2_integration.py  test_upload_isolation.py
(+318 files in other folders)
