[tool.poetry]
name = "rag-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.1.16"
langchain-community = "^0.0.34"
langchain-core = "^0.1.45"
langchain-openai = "^0.1.3"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
fastapi = "^0.110.2"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
uvicorn = "^0.29.0"
pypdf = "^4.2.0"
unstructured = "^0.13.3"
markdown = "^3.6"
networkx = "^3.3"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
docx2txt = "^0.8"
pypandoc = "^1.13"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
langchain-voyageai = "^0.1.0"
langchain-google-genai = "^1.0.2"

sentence_transformers = { version = "^2.5.1", optional = true }

[tool.poetry.extras]
hf_embed = ["sentence_transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
